--- a/engineering_notebook/ch01.html
+++ b/engineering_notebook/ch01.html
@@ -451,7 +451,7 @@
         <h1>会议记录 (1)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
-                <span class="meeting-id">编号: 250601</span>
+                <p class="meeting-id">编号: 250601</p>
             </div>
             <table class="meeting-info-table">
                 <tr>
@@ -488,7 +488,7 @@
         <h1>会议记录 (2)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
-                <span class="meeting-id">编号: 250602</span>
+                <p class="meeting-id">编号: 250602</p>
             </div>
             <table class="meeting-info-table">
                 <tr>
@@ -528,7 +528,7 @@
         <h1>会议记录 (3)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
-                <span class="meeting-id">编号: 250603</span>
+                <p class="meeting-id">编号: 250603</p>
             </div>
             <table class="meeting-info-table">
                 <tr>
@@ -567,7 +567,7 @@
         <h1>会议记录 (4)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
-                <span class="meeting-id">编号: 250701</span>
+                <p class="meeting-id">编号: 250701</p>
             </div>
             <table class="meeting-info-table">
                 <tr>
@@ -609,7 +609,7 @@
         <h1>会议记录 (5)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
-                <span class="meeting-id">编号: 250702</span>
+                <p class="meeting-id">编号: 250702</p>
             </div>
             <table class="meeting-info-table">
                 <tr>
@@ -656,7 +656,7 @@
         <h1>会议记录 (6)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
-                <span class="meeting-id">编号: 250801</span>
+                <p class="meeting-id">编号: 250801</p>
             </div>
             <table class="meeting-info-table">
                 <tr>
@@ -696,7 +696,7 @@
         <h1>会议记录 (7)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
-                <span class="meeting-id">编号: 250901</span>
+                <p class="meeting-id">编号: 250901</p>
             </div>
             <table class="meeting-info-table">
                 <tr>
@@ -738,7 +738,7 @@
         <h1>会议记录 (8)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
-                <span class="meeting-id">编号: 251001</span>
+                <p class="meeting-id">编号: 251001</p>
             </div>
             <table class="meeting-info-table">
                 <tr>
@@ -781,7 +781,7 @@
         <h1>会议记录 (9)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
-                <span class="meeting-id">编号: 251002</span>
+                <p class="meeting-id">编号: 251002</p>
             </div>
             <table class="meeting-info-table">
                 <tr>
@@ -820,7 +820,7 @@
         <h1>会议记录 (10)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
-                <span class="meeting-id">编号: 251101</span>
+                <p class="meeting-id">编号: 251101</p>
             </div>
             <table class="meeting-info-table">
                 <tr>
@@ -881,6 +881,7 @@
         <br>
         <img src="assets/ch01/team-photo-2.webp" style="height: 500px;margin:0 auto;display: block;">
 
+        <p class="img-caption">看看我们搭的塔高不高！</p>
 
     </div>
 
