--- a/engineering_notebook/ch03.html
+++ b/engineering_notebook/ch03.html
@@ -39,7 +39,7 @@
     <!-- ================= PAGE 55: STEM 是什么？ ================= -->
     <div class="sheet">
 
-        <h1>3.1 STEM 是什么？</h1>
+        <h1>3.1 STEM 是什么</h1>
 
         <p>STEM 就是 <strong>Science（科学）、Technology（技术）、Engineering（工程）、Mathematics（数学）</strong> 的合体！</p>
 
@@ -55,10 +55,6 @@
 
         <p class="dialogue"><strong>叶恒嘉：</strong> “原来橡皮筋这么厉害，这就是科学的力量啊！”</p>
 
-        <div class="footer">
-            <span class="handwriting-box">日期：</span>
-            <span class="handwriting-box">记录人：</span>
-        </div>
     </div>
 
     <!-- ================= PAGE 56: 技术与工程 ================= -->
@@ -93,10 +89,7 @@
             [图片：我们画的工程设计循环图：想 -> 做 -> 试 -> 改 -> 再想]
         </div> -->
 
-        <div class="footer">
-            <span class="handwriting-box">日期：</span>
-            <span class="handwriting-box">记录人：</span>
-        </div>
+
     </div>
 
     <!-- ================= PAGE 57: 数学 ================= -->
@@ -122,10 +115,7 @@
 
         <p class="dialogue">了解了STEM，我们就像是有了内功心法！不过，光有理论还不行，真正的工程师，都是在各种条条框框（约束）里，想办法解决问题的。下一节，我们就来看看，今年的比赛，给我们设定了哪些“边界”！</p>
 
-        <div class="footer">
-            <span class="handwriting-box">日期：</span>
-            <span class="handwriting-box">记录人：</span>
-        </div>
+
     </div>
 
     <!-- ================= PAGE 58: 规则即约束 (Part 1) ================= -->
@@ -146,10 +136,7 @@
         </div> -->
         <img src="assets/ch03/3_2_vertical.webp" alt="无限垂直扩展" style="height:320px; display: block; margin: 0 auto;">
 
-        <div class="footer">
-            <span class="handwriting-box">日期：</span>
-            <span class="handwriting-box">记录人：</span>
-        </div>
+
     </div>
 
     <!-- ================= PAGE 59: 规则即约束 (Part 2) ================= -->
@@ -176,10 +163,7 @@
 
         <p class="dialogue">这些“边界”虽然限制了我们，但也激发了我们的创造力！为了在这些约束下做到最好，我们就得请出我们的“秘密武器”——机械原理！让我们看看，小小的齿轮和杠杆，能爆发出多大的能量！</p>
 
-        <div class="footer">
-            <span class="handwriting-box">日期：</span>
-            <span class="handwriting-box">记录人：</span>
-        </div>
+
     </div>
 
     <!-- ================= PAGE 60: 机械原理 - 齿轮 ================= -->
@@ -209,10 +193,7 @@
         </div> -->
         <img src="assets/ch03/3_3_gears.webp" alt="齿轮传动" style="height:260px; display: block; margin: 0 auto;">
 
-        <div class="footer">
-            <span class="handwriting-box">日期：</span>
-            <span class="handwriting-box">记录人：</span>
-        </div>
+
     </div>
 
     <!-- ================= PAGE 61: 机械原理 - 力矩 ================= -->
@@ -238,10 +219,7 @@
 
         <p class="dialogue">有了机械魔法，我们的机器人就像有了强壮的“身体”。但光有身体还不够，还得有个聪明的“大脑”来指挥它！接下来，就让我们进入编程的世界，看看怎么让机器人“活”起来！</p>
 
-        <div class="footer">
-            <span class="handwriting-box">日期：</span>
-            <span class="handwriting-box">记录人：</span>
-        </div>
+
     </div>
 
     <!-- ================= PAGE 62: 编程概念 ================= -->
@@ -261,10 +239,7 @@
             虽然 PID 很难，但为了自动赛的高分，叶恒瑞说他会努力学会的！加油！
         </div>
 
-        <div class="footer">
-            <span class="handwriting-box">日期：</span>
-            <span class="handwriting-box">记录人：</span>
-        </div>
+
     </div>
 
     <!-- ================= PAGE 63: 章末总结 ================= -->
@@ -291,10 +266,6 @@
         </div> -->
         <img src="assets/ch03/3_z_ready_to_go.webp" alt="Ready to Go" style="height:300px; display: block; margin: 50px auto;">
 
-        <div class="footer">
-            <span class="handwriting-box">日期：</span>
-            <span class="handwriting-box">记录人：</span>
-        </div>
     </div>
 
     <script src="assets/scripts/toggle-buttons.js"></script>
