--- a/engineering_notebook/ch06.html
+++ b/engineering_notebook/ch06.html
@@ -120,20 +120,20 @@
 
         <div class="cover-section">
             <h1 style="font-size: 56px; ">测试验证与实战评估</h1>
-            <h2>第六章：一代车实测与北京城市赛</h2>
+            <h2>第六章：代车实战验证与竞赛季</h2>
             <h3>Chapter 6: System Testing & Competition Analysis</h3>
 
             <div class="cover-divider"></div>
 
             <div class="cover-intro">
                 <p>
-                    本章节记录了“一代车 (Gen 1)”在完成物理搭建后的性能测试过程，以及在“2025 胜炫北京城市赛”中的实战表现。
+                    本章节记录了“一代车 (Gen 1)”在完成物理搭建后的性能测试过程，以及在“WRC北京选拔赛”和“胜炫北京城市赛”中的实战表现。
                 </p>
                 <p>
                     我们将通过详细的训练日志（6月30日-8月12日），复盘在底盘移动、抓取稳定性和自动化控制方面遇到的技术瓶颈，并记录针对性采取的工程改进措施。
                 </p>
                 <p>
-                    <strong>本章核心任务：</strong> 评估一代车的设计，验证“91分低塔”与“110分高塔”策略的可行性。
+                    <strong>本章核心任务：</strong> 评估一代车的设计，验证“91分低塔”与“110分高塔”策略的可行性，并为二代车的研发提供数据支撑。
                 </p>
             </div>
         </div>
