--- a/engineering_notebook/ch08.html
+++ b/engineering_notebook/ch08.html
@@ -142,7 +142,7 @@
                         <td width="25%" style="border: none; vertical-align: top;"><strong>赛事周期：</strong></td>
                         <td style="border: none;">
                             2025年10月 - 11月密集赛季<br>
-                            <span style="font-size: 0.9em; color: #666;">(华北大区赛 / 北京校际联赛 / 西城区赛 / 北京市赛)</span>
+                            (华北大区赛 / 北京校际联赛 / 西城区赛 / 北京市赛)
                         </td>
                     </tr>
                     <tr>
@@ -314,7 +314,7 @@
                 <td><strong>10.06</strong></td>
                 <td>
                     全天资格赛与技能赛。<br>
-                    <span class="text-red">关键节点：</span> 17:00 联队选择与代码最终测试。
+                    关键节点：17:00 联队选择与代码最终测试。
                 </td>
             </tr>
             <tr>
@@ -334,7 +334,7 @@
                 <h4>比赛数据</h4>
                 <ul>
                     <li><strong>场次：</strong> 共完成 8 场资格赛。</li>
-                    <li><strong>最高分：</strong> <span class="text-teal"><strong>277分</strong></span> (联手 683A)。</li>
+                    <li><strong>最高分：</strong><strong>277分</strong> (联手 683A)。</li>
                     <li><strong>最终排名：</strong> 决赛联手 391A，排名第 17 名。</li>
                     <li><strong>奖项：</strong> 获得一等奖（遗憾未晋级西安国赛）。</li>
                 </ul>
@@ -347,7 +347,7 @@
                 <ul>
                     <li><strong>封闭环境压力：</strong> 首次面对全封闭赛场与“封箱”规则（赛后机器贴封条不可带出），三人团队心理高度紧张。</li>
                     <li><strong>评审抽查：</strong> 参与了第一版工程笔记的评审答辩，被重点考察了零件认知与程序掌握能力。</li>
-                    <li><strong>紧急维修：</strong> <span class="text-red">严重故障！</span>
+                    <li><strong>紧急维修：</strong> 严重故障！
                         备赛中横销断裂。现场紧急借用短销固定，操作手在极度紧张（双手颤抖）的情况下完成了修复并坚持完赛。</li>
                 </ul>
             </div>
@@ -421,14 +421,14 @@
         <h3 class="text-teal">一、 比赛日程 (Schedule)</h3>
         <table class="checklist-table" style="font-size: 14px; margin-bottom: 20px;">
             <tr style="background-color: #f9f9f9;">
-                <td width="20%"><strong>10.25 (Day 1)</strong></td>
+                <td width="20%"><strong>10.25</strong></td>
                 <td>
                     13:00 - 14:30 注册报到、机器人检录<br>
                     15:00 - 17:30 选手会议、<strong>技能赛 (Skills Matches)</strong>
                 </td>
             </tr>
             <tr>
-                <td><strong>10.26 (Day 2)</strong></td>
+                <td><strong>10.26</strong></td>
                 <td>
                     08:00 - 08:30 入场准备<br>
                     08:30 - 12:30 资格赛 (Qualifications)<br>
@@ -463,13 +463,13 @@
     <div class="sheet">
         <h1>8.5 北京校际联赛（2）赛后复盘</h1>
 
-        <p>本次比赛不仅获得了国赛入场券，更验证了我们在赛前进行的“三代车”升级方向的正确性，同时也暴露了严重的流程管理问题。</p>
+        <p>本次比赛不仅获得了国赛入场券，更验证了我们在赛前进行的“二代车”升级方向的正确性，同时也暴露了严重的流程管理问题。</p>
 
         <h3 class="text-teal">复盘总结 (Post-Match Analysis)</h3>
 
         <div class="analysis-section">
-            <span class="analysis-title text-green">1. 技术升级验证：三代车 (Gen 3) 初现锋芒</span>
-            <p>赛前我们紧急将车子升级为<strong>三代车配置</strong>，并优化了全新路线。</p>
+            <span class="analysis-title text-green">1. 技术升级验证：二代车 (Gen 2) 初现锋芒</span>
+            <p>赛前我们紧急将车子升级为<strong>二代车配置</strong>，并优化了全新路线。</p>
             <ul>
                 <li><strong>高塔优化：</strong> 在搭高塔及得分环节进行了针对性改动，准确度提升至近乎 <strong>100%</strong>。</li>
                 <li><strong>效率提升：</strong> 机械结构的优化使得整体运行速度提升了 <strong>2-3秒</strong>，为复杂操作留出了更多冗余时间。</li>
@@ -750,7 +750,7 @@
             </ol>
         </div>
 
-        <p style="font-size: 30px;margin-top: 40px; text-align: center; font-weight: bold; color: #555;">
+        <p style="font-size: 35px;margin-top: 40px; text-align: center; font-weight: bold; color: #555;">
             持续改进，永不止步。<br>
         </p>
 
