--- a/engineering_notebook/ch08.html
+++ b/engineering_notebook/ch08.html
@@ -719,9 +719,62 @@
         </div>
 
     </div>
+<div class="sheet">
+        <h1>8.8 一代车、二代车得分策略对比（1）</h1>
+        <img src="assets/ch08/g1vg2_1.webp" alt="一代车二代车对比（1）"
+            style="display: block;max-height:800px; margin: 10px auto; border-radius: 10px;">
+    </div>
 
     <div class="sheet">
-        <h1>8.8 本章总结与未来计划</h1>
+        <h1>8.8 一代车、二代车得分策略对比（2）</h1>
+        <img src="assets/ch08/g1vg2_2.webp" alt="一代车二代车对比（2）"
+            style="display: block;max-height:800px; margin: 10px auto; border-radius: 10px;">
+    </div>
+
+    <div class="sheet">
+        <h1>8.8 一代车、二代车得分策略对比（3）</h1>
+        <img src="assets/ch08/g1vg2_3.webp" alt="一代车二代车对比（3）"
+            style="display: block;max-height:800px; margin: 10px auto; border-radius: 10px;">
+    </div>
+
+    <div class="sheet">
+        <h1>8.8 一代车、二代车得分策略对比（4）</h1>
+        <img src="assets/ch08/g1vg2_4.webp" alt="一代车二代车对比（4）"
+            style="display: block;max-height:800px; margin: 10px auto; border-radius: 10px;">
+    </div>
+
+    <div class="sheet">
+        <h1>8.8 一代车、二代车得分策略对比（5）</h1>
+        <img src="assets/ch08/g1vg2_5.webp" alt="一代车二代车对比（5）"
+            style="display: block;max-height:800px; margin: 10px auto; border-radius: 10px;">
+    </div>
+
+    <div class="sheet">
+        <h1>8.8 一代车、二代车得分策略对比（6）</h1>
+        <img src="assets/ch08/g1vg2_6.webp" alt="一代车二代车对比（6）"
+            style="display: block;max-height:800px; margin: 10px auto; border-radius: 10px;">
+    </div>
+
+    <div class="sheet">
+        <h1>8.8 一代车、二代车得分策略对比（7）</h1>
+        <img src="assets/ch08/g1vg2_7.webp" alt="一代车二代车对比（7）"
+            style="display: block;max-height:800px; margin: 10px auto; border-radius: 10px;">
+    </div>
+
+    <div class="sheet">
+        <h1>8.8 一代车、二代车得分策略对比（8）</h1>
+        <img src="assets/ch08/g1vg2_8.webp" alt="一代车二代车对比（8）"
+            style="display: block;max-height:800px; margin: 10px auto; border-radius: 10px;">
+    </div>
+
+    <div class="sheet">
+        <h1>8.8 一代车、二代车得分策略对比（9）</h1>
+        <img src="assets/ch08/g1vg2_9.webp" alt="一代车二代车对比（9）"
+            style="display: block;max-height:800px; margin: 10px auto; border-radius: 10px;">
+    </div>
+
+    <div class="sheet">
+        <h1>第八章总结与未来计划</h1>
 
         <p>
             从石家庄的硬件故障，到西城区的流程混乱，再到北京市赛的“偏科”惨剧。第八章记录了二代车在动荡中成长的全过程。
