chzz: Final Chapter - Reflections and Growth

--- a/engineering_notebook/chzz.html
+++ b/engineering_notebook/chzz.html
@@ -182,7 +182,7 @@
   <body class="theme-teal">
 
     <div class="sheet">
-      <h1>最终章：感悟与成长</h1>
+      <h1>感悟与成长</h1>
 
       <h3 class="text-teal">我们的心路历程</h3>
 
@@ -196,14 +196,29 @@
         比赛的压力是我们成长的催化剂。当倒计时的铃声响起，当机器人突发故障，我们学会了沉着应对、放平心态。严格的赛事规则，让我们树立了强烈的规则意识；与不同团队的交流碰撞，锻炼了我们的表达沟通能力；合理分配训练与学习时间，让时间管理成为刻在骨子里的习惯。
       </p>
       <p style="margin-top: 20px; line-height: 1.8;">
-        VEX带给我们的勇于探索的进取精神、精益求精的追求，以及面对挑战时的抗压能力，都已融入我们的学习与生活，成为人生路上宝贵的财富。
-      </p>
+
 
 
       <img src="assets/chzz/image2.png" alt="2276A军团"
-        style="display: block;height:240px; margin: 10px auto; border-radius: 10px;">
+        style="display: block;height:350px; margin: 10px auto; border-radius: 10px;">
     </div>
+    <div class="sheet">
+      <h1>感悟与成长（续）</h1>
 
+      <p style="margin-top: 20px; line-height: 1.8;">
+        VEX带给我们的勇于探索的进取精神、精益求精的追求，以及面对挑战时的抗压能力，都已融入我们的学习与生活，成为人生路上宝贵的财富。
+      </p>
+      <p style="margin-top: 20px; line-height: 1.8;">
+此外，VEX更在我们的心中埋下了创新的种子与求真的渴望。它教会我们，面对难题从来没有唯一的标准答案，只有不断的优化与迭代。无论是机械结构的推倒重来，还是自动程序的百遍调试，每一次“试错”都是思维的破茧成蝶。这种像工程师一样去发现问题、拆解逻辑、动手解决的思维方式，让我们不再满足于课本上的理论，而是渴望用双手去构建、去创造，去触摸科技的脉搏。
+
+<!-- <p style="margin-top: 20px; line-height: 1.8;">
+        回望那些在训练室度过的日夜，哪怕并没有镁光灯的照耀，却依然熠熠生辉。2276A不仅仅是一串编号，它凝聚了我们共同的青春、汗水与热血。未来的路或许充满了未知的变量，但只要带着VEX赋予我们的这股“韧劲”与协作精神，我们便有底气去定义属于自己的精彩坐标。      </p>
+      </p> -->
+      <img src="assets/chzz/together.webp" alt="Fight Together"
+        style="display: block;height:400px; margin: 10px auto; border-radius: 10px;">
+
+
+    </div>
     <div class="sheet">
       <h1>曾获奖项（1）</h1>
       <p>记录我们在赛季中获得的荣誉与肯定。</p>
