--- a/engineering_notebook/index.html
+++ b/engineering_notebook/index.html
@@ -174,6 +174,28 @@
         <div class="page-number">iii</div>
     </div>
 
+    <!-- ================= TABLE OF CONTENTS PAGE 4 (APPENDIX) ================= -->
+    <div class="sheet">
+        <h1 style="font-size: 48px; border: none; color: #005f9e; text-align: center; margin-bottom: 30px;">
+            附&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;录</h1>
+        <div style="display: flex; justify-content: center;">
+            <ul
+                style="font-size: 18px; line-height: 1.4; list-style-type: none; padding: 0; width: fit-content; min-width: 50%;">
+
+                <!-- Appendix -->
+                <li style="margin: 5px 0;"><strong><a href="chzz.html">附录：感悟与成长及获奖记录</a></strong>
+                    <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
+                        <li style="margin: 5px 0;">ZZ.1 感悟与成长</li>
+                        <li style="margin: 5px 0;">ZZ.2 曾获奖项（1）</li>
+                        <li style="margin: 5px 0;">ZZ.3 曾获奖项（2）</li>
+                        <li style="margin: 5px 0;">ZZ.4 曾获奖项（3）</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="page-number">iv</div>
+    </div>
+
     <!-- <script src="assets/scripts/common-elements.js"></script> -->
     <script src="assets/scripts/navigation-button.js"></script>
     <script src="assets/scripts/toggle-buttons.js"></script>
