updated ToC for ch08

--- a/engineering_notebook/index.html
+++ b/engineering_notebook/index.html
@@ -166,7 +166,7 @@
                         <li style="margin: 5px 0;">8.5 北京校际联赛</li>
                         <li style="margin: 5px 0;">8.6 西城区中小学生机器人智能大赛</li>
                         <li style="margin: 5px 0;">8.7 北京市中小学生机器人智能大赛</li>
-                        <li style="margin: 5px 0;">8.8 本章总结与未来计划</li>
+                        <li style="margin: 5px 0;">8.8 一代车、二代车得分策略对比</li>
                     </ul>
                 </li>
             </ul>
