--- a/engineering_notebook/ch07.html
+++ b/engineering_notebook/ch07.html
@@ -415,73 +415,129 @@
         </table>
     </div>
 
-    <!-- ================= PAGE 124: 核心零件清单 ================= -->
+    <!-- ================= PAGE 124: 核心零件清单 (Part 1) ================= -->
     <div class="sheet">
-        <h1>7.8 二代车核心零件清单 (BOM)</h1>
+        <h1>7.8 二代车核心零件清单 (BOM) - Part 1</h1>
 
         <table class="parts-table">
             <thead>
                 <tr>
                     <th width="12%">类别</th>
-                    <th>核心名称</th>
+                    <th width="25%">核心名称</th>
                     <th width="8%">数量</th>
-                    <th width="12%">类别</th>
-                    <th>核心名称</th>
-                    <th width="8%">数量</th>
+                    <th width="25%">零件照片</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td rowspan="4">电子/传感器</td>
+                    <td>电子/传感器</td>
                     <td>V5 主控器 / 遥控器</td>
                     <td>1 / 1</td>
-                    <td rowspan="4">动力/气动</td>
-                    <td>V5 智能电机 (600/200rpm)</td>
-                    <td>6</td>
+                    <td><img src="assets/ch07/v5_controller_remote.png" alt="V5 Controller & Remote" style="max-width:100%; max-height:100px; display:block; margin:0 auto; border-radius:5px;"></td>
                 </tr>
                 <tr>
+                    <td>电子/传感器</td>
                     <td>距离传感器 (Distance)</td>
                     <td>2</td>
-                    <td>气罐 / 气泵</td>
-                    <td>2 / 1</td>
+                    <td><img src="assets/ch07/distance_sensor.png" alt="Distance Sensor" style="max-width:100%; max-height:100px; display:block; margin:0 auto; border-radius:5px;"></td>
                 </tr>
                 <tr>
+                    <td>电子/传感器</td>
                     <td>触碰 LED (Touch LED)</td>
                     <td>1</td>
-                    <td>长 / 短气缸</td>
-                    <td>2 / 1</td>
+                    <td><img src="assets/ch07/touch_led.png" alt="Touch LED" style="max-width:100%; max-height:100px; display:block; margin:0 auto; border-radius:5px;"></td>
                 </tr>
-                <tr>
+                <!-- <tr>
+                    <td>电子/传感器</td>
                     <td>磁性传感器 / 电磁阀</td>
                     <td>3</td>
-                    <td>电磁阀组合</td>
-                    <td>3</td>
+                    <td><img src="assets/ch07/magnetic_sensor_valve.png" alt="Magnetic Sensor & Valve" style="max-width:100%; max-height:100px; display:block; margin:0 auto; border-radius:5px;"></td>
+                </tr> -->
+                <tr>
+                    <td>动力/气动</td>
+                    <td>V5 智能电机 (600/200rpm)</td>
+                    <td>6</td>
+                    <td><img src="assets/ch07/v5_smart_motor.png" alt="V5 Smart Motor" style="max-width:100%; max-height:100px; display:block; margin:0 auto; border-radius:5px;"></td>
                 </tr>
                 <tr>
-                    <td rowspan="3">结构传动</td>
-                    <td>24齿/36齿/60齿/12齿</td>
-                    <td>6/6/2/4</td>
-                    <td rowspan="3">结构件</td>
-                    <td>一体化 4X 梁</td>
-                    <td>2</td>
+                    <td>动力/气动</td>
+                    <td>气罐 / 气泵</td>
+                    <td>2 / 1</td>
+                    <td><img src="assets/ch07/air_tank_pump.png" alt="Air Tank & Pump" style="max-width:100%; max-height:100px; display:block; margin:0 auto; border-radius:5px;"></td>
                 </tr>
                 <tr>
-                    <td>300 / 450 / 600 规格梁</td>
-                    <td>2/2/0</td>
-                    <td>2x16 / 2x20 横梁</td>
-                    <td>6/5</td>
-                </tr>
-                <tr>
-                    <td>万向轮 (Omni Wheels)</td>
-                    <td>4</td>
-                    <td>销钉/垫片/橡皮筋</td>
-                    <td>若干</td>
+                    <td>动力/气动</td>
+                    <td>长 / 短气缸</td>
+                    <td>2 / 1</td>
+                    <td><img src="assets/ch07/long_short_cylinder.png" alt="Long & Short Cylinder" style="max-width:100%; max-height:100px; display:block; margin:0 auto; border-radius:5px;"></td>
                 </tr>
             </tbody>
         </table>
     </div>
 
-    <!-- ================= PAGE 125: 性能测试指标 ================= -->
+    <!-- ================= PAGE 125: 核心零件清单 (Part 2) ================= -->
+    <div class="sheet">
+        <h1>7.8 二代车核心零件清单 (BOM) - Part 2</h1>
+
+        <table class="parts-table">
+            <thead>
+                <tr>
+                    <th width="12%">类别</th>
+                    <th width="25%">核心名称</th>
+                    <th width="8%">数量</th>
+                    <th width="25%">零件照片</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>动力/气动</td>
+                    <td>电磁阀组合</td>
+                    <td>3</td>
+                    <!-- <td><img src="assets/ch07/valve_combo.png" alt="Valve Combo" style="max-width:100%; max-height:100px; display:block; margin:0 auto; border-radius:5px;"></td> -->
+                    <td><img src="assets/ch07/magnetic_sensor_valve.png" alt="Valve Combo" style="max-width:100%; max-height:100px; display:block; margin:0 auto; border-radius:5px;"></td>
+                </tr>
+                <tr>
+                    <td>结构传动</td>
+                    <td>24齿/36齿/60齿/12齿</td>
+                    <td>6/6/2/4</td>
+                    <td><img src="assets/ch07/gears_24_36_60_12.png" alt="Gears 24, 36, 60, 12" style="max-width:100%; max-height:100px; display:block; margin:0 auto; border-radius:5px;"></td>
+                </tr>
+                <!-- <tr>
+                    <td>结构件</td>
+                    <td>一体化 4X 梁</td>
+                    <td>2</td>
+                    <td><img src="assets/ch07/integrated_4x_beam.png" alt="Integrated 4X Beam" style="max-width:100%; max-height:100px; display:block; margin:0 auto; border-radius:5px;"></td>
+                </tr> -->
+                <!-- <tr>
+                    <td>结构件</td>
+                    <td>300 / 450 / 600 规格梁</td>
+                    <td>2/2/0</td>
+                    <td><img src="assets/ch07/spec_beams_300_450_600.png" alt="Spec Beams 300, 450, 600" style="max-width:100%; max-height:100px; display:block; margin:0 auto; border-radius:5px;"></td>
+                </tr> -->
+                <tr>
+                    <td>结构件</td>
+                    <td>2x16 / 2x20 横梁</td>
+                    <td>6/5</td>
+                    <td><img src="assets/ch07/cross_beams_2x16_2x20.png" alt="Cross Beams 2x16, 2x20" style="max-width:100%; max-height:100px; display:block; margin:0 auto; border-radius:5px;"></td>
+                </tr>
+                <tr>
+                    <td>结构件</td>
+                    <td>全向轮 (Omni Wheels)</td>
+                    <td>4</td>
+                    <td><img src="assets/ch07/omni_wheels.png" alt="Omni Wheels" style="max-width:100%; max-height:100px; display:block; margin:0 auto; border-radius:5px;"></td>
+                </tr>
+                <tr>
+                    <td>结构件</td>
+                    <td>销钉/垫片/橡皮筋</td>
+                    <td>若干</td>
+                    <td></td>
+                    <!-- <td><img src="assets/ch07/pins_washers_rubber_bands.png" alt="Pins, Washers, Rubber Bands" style="max-width:100%; max-height:100px; display:block; margin:0 auto; border-radius:5px;"></td> -->
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <!-- ================= PAGE 126: 性能测试指标 ================= -->
     <div class="sheet">
         <h1>7.9 性能测试与最终调试总结</h1>
 
@@ -527,7 +583,7 @@
         </div>
     </div>
 
-    <!-- ================= PAGE 126: 章节总结 ================= -->
+    <!-- ================= PAGE 127: 章节总结 ================= -->
     <div class="sheet">
         <h1>第七章总结：成熟的二代机</h1>
 
